# azure-sdk-ux-study

./: .gitignore  GeneralInstructions.txt  LICENSE  README.md
Scenario1/: CMakeLists.txt  uploadFile.cpp
Scenario2/: CMakeLists.txt  transferBlob.cpp
Scenario3/: CMakeLists.txt  debugError.cpp
Scenario4/: CMakeLists.txt  longRunning.cpp
